@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9968';
+our $VERSION='0.9969';
 
 
 use 5.005;
